Fix flicker when selecting brain text

--- a/vis/style.css
+++ b/vis/style.css
@@ -11,4 +11,5 @@ td.state-no:before {
 table.brain {
     font-family: monospace;
     white-space: pre;
+    border-spacing: 0px;
 }
